--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "babel-preset-stage-3": "^6.24.1",
     "babel-runtime": "^6.25.0",
     "css-loader": "^0.28.4",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "file-loader": "^0.11.2",
     "nodemon": "^1.14.11",
     "vue": "^2.4.2",
@@ -31,6 +36,8 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
-    "mongoose": "^4.13.10"
+    "mongoose": "^4.13.10",
+    "style-loader": "^0.20.2",
+    "url-loader": "^0.6.2"
   }
 }
